# simplechatclient

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  README.md  compile.bat  compile_debug.bat  compile_debug.sh  compile_release.bat  compile_release.sh  scc-config.h.cmake  scc.desktop  scc.pro  scc.qrc  scc_mingw.rc
.travis/before_install/: linux.sh  osx.sh
.travis/install/: linux.sh
src/: CMakeLists.txt
src/common/: commands.cpp  commands.h  config.cpp  config.h  convert.cpp  convert.h  html_messages_renderer.cpp  html_messages_renderer.h  kamerzysta.cpp  kamerzysta.h  log.cpp  log.h  mpris_player.cpp  mpris_player.h  replace.cpp  replace.h  simple_crypt.cpp  simple_crypt.h  webcam_engine.cpp  webcam_engine.h  webcam_network.cpp  webcam_network.h  winamp.cpp  winamp.h  xml.cpp  xml.h
src/core/: core.cpp  core.h  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  network.h
src/gui/: about_gui.cpp  about_gui.h  avatar_edit_gui.cpp  avatar_edit_gui.h  awaylog_gui.cpp  awaylog_gui.h  captcha_gui.cpp  captcha_gui.h  channel_favourites_gui.cpp  channel_favourites_gui.h  channel_homes_gui.cpp  channel_homes_gui.h  channel_key_gui.cpp  channel_key_gui.h  channel_list_gui.cpp  channel_list_gui.h  channel_settings_gui.cpp  channel_settings_gui.h  emoticons_gui.cpp  emoticons_gui.h  find_nick_gui.cpp  find_nick_gui.h  find_text_gui.cpp  find_text_gui.h  friends_gui.cpp  friends_gui.h  ignore_gui.cpp  ignore_gui.h  invite_gui.cpp  invite_gui.h  invite_list_gui.cpp  invite_list_gui.h  join_channel_gui.cpp  join_channel_gui.h  moderation_gui.cpp  moderation_gui.h  my_avatar_gui.cpp  my_avatar_gui.h  my_profile_gui.cpp  my_profile_gui.h  (+34 more)
src/irc/: irc_auth.cpp  irc_auth.h  irc_kernel.cpp  irc_kernel.h
src/models/: autoaway.cpp  autoaway.h  avatar.cpp  avatar.h  away.cpp  away.h  awaylog.cpp  awaylog.h  busy.cpp  busy.h  cache.cpp  cache.h  channel.cpp  channel.h  channel_favourites.cpp  channel_favourites.h  channel_homes.cpp  channel_homes.h  channel_list.cpp  channel_list.h  channel_settings.cpp  channel_settings.h  emoticons.cpp  emoticons.h  find_nick.cpp  find_nick.h  friends.cpp  friends.h  highlight.cpp  highlight.h  ignore.cpp  ignore.h  invite.cpp  invite.h  lag.cpp  lag.h  message.cpp  message.h  my_avatar.cpp  my_avatar.h  (+32 more)
src/onet/: onet_auth.cpp  onet_auth.h  onet_avatar.cpp  onet_avatar.h  onet_kernel.cpp  onet_kernel.h  onet_utils.cpp  onet_utils.h
src/tab/: tab_container.cpp  tab_container.h  tab_manager.cpp  tab_manager.h  tab_widget.cpp  tab_widget.h
src/widgets/: avatar_edit_scene.cpp  avatar_edit_scene.h  avatar_list_widget.cpp  avatar_list_widget.h  chat_view.cpp  chat_view.h  inputline_widget.cpp  inputline_widget.h  nicklist_delegate.cpp  nicklist_delegate.h  nicklist_widget.cpp  nicklist_widget.h  simple_percentage_widget.cpp  simple_percentage_widget.h  simple_rank_widget.cpp  simple_rank_widget.h  simple_stats_widget.cpp  simple_stats_widget.h  tool_button_menu.cpp  tool_button_menu.h  tool_widget.cpp  tool_widget.h  topic_widget.cpp  topic_widget.h  webcam_delegate.cpp  webcam_delegate.h
tests/: CMakeLists.txt  test_example.cpp  test_example.h
translations/: scc_pl.ts
ui/: channel_list.ui  emoticons.ui
